--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -49,16 +49,16 @@
             </div>
         </div>
         <div class="navbar-mobile__menu-items">
-            <a href="digital.html" class="navbar__menu-item navbar__menu-item--active">
+            <a href="digital.html" class="navbar__menu-item">
                 Digital
             </a>
-            <a href="/" class="navbar__menu-item">
+            <a href="alternative.html" class="navbar__menu-item">
                 Alternatives
             </a>
             <a href="/" class="navbar__menu-item">
                 About
             </a>
-            <a href="/" class="navbar__menu-item">
+            <a href="weekendNotes.html" class="navbar__menu-item">
                 Data Room
             </a>
         </div>
