--- a/weekendArticle1.html
+++ b/weekendArticle1.html
@@ -15,7 +15,7 @@
     <nav class="navbar">
         <div class="navbar__container">
             <div class="navbar__menu">
-                <a href="/" class="navbar__menu-item navbar__menu-item--active">
+                <a href="/" class="navbar__menu-item">
                     Digital
                 </a>
                 <a href="/" class="navbar__menu-item">
@@ -24,7 +24,7 @@
                 <a href="/" class="navbar__menu-item">
                     About
                 </a>
-                <a href="/" class="navbar__menu-item">
+                <a href="/" class="navbar__menu-item navbar__menu-item--active">
                     Data Room
                 </a>
             </div>
@@ -43,7 +43,7 @@
             </div>
         </div>
         <div class="navbar-mobile__menu-items">
-            <a href="/" class="navbar__menu-item navbar__menu-item--active">
+            <a href="/" class="navbar__menu-item">
                 Digital
             </a>
             <a href="/" class="navbar__menu-item">
@@ -52,7 +52,7 @@
             <a href="/" class="navbar__menu-item">
                 About
             </a>
-            <a href="/" class="navbar__menu-item">
+            <a href="/" class="navbar__menu-item navbar__menu-item--active">
                 Data Room
             </a>
         </div>
@@ -74,27 +74,28 @@
             </div>
             <div class="weekend-content__selector weekend-content__selector--media">
                 <span>
-                    Media
+                    <a href="./weekendNotes.html?section=media"> Media </a>
                 </span>
-                <div class="weekend-content__selector-button"></div>
+                <a href="./weekendNotes.html?section=media"> <div class="weekend-content__selector-button"></div> </a>
+              </a>
             </div>
             <div class="weekend-content__selector weekend-content__selector--press">
                 <span>
-                    Press
+                    <a href="./weekendNotes.html?section=press"> Press </a>
                 </span>
-                <div class="weekend-content__selector-button"></div>
+                <a href="./weekendNotes.html?section=press"> <div class="weekend-content__selector-button"></div> </a>
             </div>
             <div class="weekend-content__selector weekend-content__selector--podcasts">
                 <span>
-                    Podcasts
+                    <a href="./weekendNotes.html?section=podcasts"> Podcasts </a>
                 </span>
-                <div class="weekend-content__selector-button"></div>
+                <a href="./weekendNotes.html?section=podcasts"> <div class="weekend-content__selector-button"></div> </a>
             </div>
             <div class="weekend-content__selector weekend-content__selector--resources">
                 <span>
-                    Resources
+                    <a href="./weekendNotes.html?section=resources"> Resources </a>
                 </span>
-                <div class="weekend-content__selector-button"></div>
+                <a href="./weekendNotes.html?section=resources"> <div class="weekend-content__selector-button"></div> </a>
             </div>
             <div class="weekend-content__selector weekend-content__selector--weekend weekend-content__selector--active">
               <span>
