--- a/termsconditions.html
+++ b/termsconditions.html
@@ -52,13 +52,13 @@
             <a href="digital.html" class="navbar__menu-item navbar__menu-item--active">
                 Digital
             </a>
-            <a href="/" class="navbar__menu-item">
+            <a href="alternative.html" class="navbar__menu-item">
                 Alternatives
             </a>
             <a href="/" class="navbar__menu-item">
                 About
             </a>
-            <a href="/" class="navbar__menu-item">
+            <a href="weekendNotes.html" class="navbar__menu-item">
                 Data Room
             </a>
         </div>
