--- a/about.html
+++ b/about.html
@@ -1,142 +1,257 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="./css/style.css" />
-        <link rel="stylesheet" href="./assets/fonts/IvyMode/index.css" />
-        <link rel="stylesheet" href="./assets/fonts/Optima/index.css" />
-        <title>One River</title>
-    </head>
 
-    <body>
-        <nav class="navbar">
-            <div class="navbar__container">
-                <div class="navbar__menu">
-                    <a href="digital.html" class="navbar__menu-item">
-                        Digital
-                    </a>
-                    <a href="alternative.html" class="navbar__menu-item">
-                        Alternatives
-                    </a>
-                    <a href="about.html" class="navbar__menu-item"> About </a>
-                    <a href="weekendNotes.html" class="navbar__menu-item">
-                        Data Room
-                    </a>
-                </div>
-                <div class="navbar__logo backInRight">
-                    <a href="index.html">
-                        <img
-                            src="./assets/images/footer-logo.png"
-                            alt="OneRiver Digital Logo"
-                            class="u-image-contain"
-                        />
-                    </a>
-                </div>
-            </div>
-        </nav>
-        <nav class="navbar-mobile">
-            <div class="navbar-mobile__menu">
-                <div class="navbar-mobile__logo">
-                    <img
-                        src="./assets/images/oneriver-logo-light.png"
-                        alt="OneRiver Digital Logo"
-                        class="u-image-contain"
-                    />
-                </div>
-                <div class="navbar-mobile__toggle">
-                    <div class="navbar-mobile__toggle-icon"></div>
-                </div>
-            </div>
-            <div class="navbar-mobile__menu-items">
-                <a
-                    href="digital.html"
-                    class="navbar__menu-item navbar__menu-item--active"
-                >
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./assets/fonts/IvyMode/index.css">
+    <link rel="stylesheet" href="./assets/fonts/Optima/index.css">
+    <title>One River - About</title>
+</head>
+
+<body>
+    <nav class="navbar">
+        <div class="navbar__container">
+            <div class="navbar__menu">
+                <a href="/" class="navbar__menu-item navbar__menu-item--active">
                     Digital
                 </a>
-                <a href="alternative.html" class="navbar__menu-item">
+                <a href="/" class="navbar__menu-item">
                     Alternatives
                 </a>
-                <a href="about.html" class="navbar__menu-item"> About </a>
-                <a href="weekendNotes.html" class="navbar__menu-item">
+                <a href="/" class="navbar__menu-item">
+                    About
+                </a>
+                <a href="/" class="navbar__menu-item">
                     Data Room
                 </a>
             </div>
-        </nav>
-
-        
-        <footer class="footer">
-            <div class="footer__container">
-                <div class="footer__logo">
-                    <img
-                        src="./assets/images/footer-logo.png"
-                        alt="OneRiver Logo"
-                        class="u-image-contain"
-                    />
+            <div class="navbar__logo">
+                <img src="./assets/images/oneriver-digital-logo.png" alt="OneRiver Digital Logo"
+                    class="u-image-contain">
+            </div>
+        </div>
+    </nav>
+    <nav class="navbar-mobile">
+        <div class="navbar-mobile__menu">
+            <div class="navbar-mobile__logo">
+                <img src="./assets/images/oneriver-digital-logo.png" alt="OneRiver Digital Logo"
+                    class="u-image-contain">
+            </div>
+            <div class="navbar-mobile__toggle">
+                <div class="navbar-mobile__toggle-icon"></div>
+            </div>
+        </div>
+        <div class="navbar-mobile__menu-items">
+            <a href="/" class="navbar__menu-item navbar__menu-item--active">
+                Digital
+            </a>
+            <a href="/" class="navbar__menu-item">
+                Alternatives
+            </a>
+            <a href="/" class="navbar__menu-item">
+                About
+            </a>
+            <a href="/" class="navbar__menu-item">
+                Data Room
+            </a>
+        </div>
+    </nav>
+    <header class="about-banner">
+        <div class="about-banner__title-container">
+            <h1 class="about-banner__title">
+                Investment Team
+            </h1>
+            <div class="about-banner__title-el"></div>
+        </div>
+        <div class="about-banner__selectors-container">
+            <div class="about-banner__selector">
+                <span>
+                    NON-INVESTMENT TEAM
+                </span>
+                <div></div>
+            </div>
+            <div class="about-banner__selector">
+                <span>
+                    Academic & Regulatory Advisory Council
+                </span>
+                <div></div>
+            </div>
+        </div>
+        <div class="about-banner__carousel">
+            <div class="about-banner__carousel-item">
+                <img src="./assets/images/about/investment-team/Eric2.png" alt="Investment Team member"
+                    class="u-image-cover">
+            </div>
+            <div class="about-banner__carousel-item">
+                <img src="./assets/images/about/investment-team/Lindsay2.png" alt="Investment Team member"
+                    class="u-image-cover">
+            </div>
+            <div class="about-banner__carousel-item">
+                <img src="./assets/images/about/investment-team/Marcel2.png" alt="Investment Team member"
+                    class="u-image-cover">
+            </div>
+            <div class="about-banner__carousel-item">
+                <img src="./assets/images/about/investment-team/Ryan2.png" alt="Investment Team member"
+                    class="u-image-cover">
+            </div>
+            <div class="about-banner__carousel-item">
+                <img src="./assets/images/about/investment-team/Shaun-Martinak.png" alt="Investment Team member"
+                    class="u-image-cover">
+            </div>
+            <div class="about-banner__carousel-item">
+                <img src="./assets/images/about/investment-team/Chase2.png" alt="Investment Team member"
+                    class="u-image-cover">
+            </div>
+        </div>
+        <div class="about-banner__carousel-details">
+            <div class="about-banner__carousel-details-content">
+                <div class="about-banner__carousel-title">
+                    ERIC PETERS
                 </div>
-                <div class="footer__contact">
-                    <div class="footer__contact-row">
-                        <span class="footer__contact-info">
-                            (203) 489-1440
-                        </span>
-                        <span class="footer__contact-info-spacer">|</span>
-                        <span class="footer__contact-info">
-                            info@oneriveram.com
-                        </span>
-                    </div>
-                    <div class="footer__contact-row">
-                        <span class="footer__contact-info">
-                            <span>3 River Road,</span>
-                            <span>2nd Floor, Greenwich,</span>
-                            <span>CT 06807</span>
-                        </span>
-                    </div>
-                    <div class="footer__contact-row">
-                        <span class="footer__contact-info">
-                            NFA ID: 0461647
-                        </span>
-                        <span class="footer__contact-info-spacer">|</span>
-                        <span class="footer__contact-info">
-                            FINRA: 167835
-                        </span>
-                    </div>
-                </div>
-                <div class="footer__text-container">
-                    <p class="footer__text">
-                        One River Asset Management is an SEC registered
-                        investment advisor, regulated by the National Futures
-                        Association, and manages ERISA assets as a Qualified
-                        Plan Asset Manager.
-                    </p>
-                    <div class="footer__text footer__text--small">
-                        © 2020 One River Asset Management. All Rights Reserved.
-                    </div>
+                <div class="about-banner__carousel-text">
+                    Chief Executive Officer/Chief Investment Officer
                 </div>
             </div>
-            <div class="footer__legal-links">
-                <div class="footer__legal-item">
-                    <a href="privacypolicy.html" class="footer__legal-link">
-                        Privacy
-                    </a>
+        </div>
+    </header>
+    <section class="about-content">
+        <div class="about-content__container">
+            <p class="about-content__text">
+                Eric Peters is the Founder, CEO, and CIO of One River Asset Management and its subsidiary, One River
+                Digital Asset Management. One River is an innovative investment manager dedicated to delivering
+                high-conviction discretionary and quantitative strategies that help its clients build superior
+                portfolios. One River sees the world in a period of major economic and political transition, with the
+                investment landscape shifting in ways that will make the coming ten years look profoundly different from
+                the past decade. Its strategies are built to profit from this dynamic environment while providing strong
+                diversification benefits to traditional investment portfolios.
+                <br>
+                <br>
+                Prior to founding One River in 2013, Eric served as Chairman of Grant Capital Partners, a $1.25 billion
+                discretionary global macro hedge fund. In that role, Eric focused on thematic investment opportunities
+                and was responsible for all non-investment activities including the direct oversight of the Chief Risk
+                Officer. Over the course of his career, Eric has held various positions that include portfolio manager
+                for Peloton Partners, proprietary trader for both Lehman Brothers and Credit Suisse, and Founder and
+                Chief Executive Officer of a TH Lee Putnam funded technology firm.
+                <br>
+                <br>
+                Eric travels extensively, exchanging ideas, debating policy, and identifying investment opportunities
+                with many of the world’s top investment managers, economists, strategists, political consultants,
+                academics, scientists, and business leaders. The content of those discussions often finds its way into
+                his weekly investment letter - Weekend Notes - which is read by investment professionals who directly
+                deploy over $1trln in alternative assets.
+            </p>
+        </div>
+    </section>
+    <sectioin class="about-contact">
+        <div class="about-contact__container">
+            <div class="about-contact__details">
+                <div class="about-contact__title">
+                    Contact
                 </div>
-                <div class="footer__legal-item">
-                    <a href="termsconditions.html" class="footer__legal-link">
-                        Terms of use
-                    </a>
+                <div class="about-contact__info">
+                    <div class="about-contact__group-title">
+                        HEADQUARTERS
+                    </div>
+                    One River Asset Management, LLC
+                    <br>
+                    3 River Road, 2nd Floor
+                    <br>
+                    Greenwich, CT 06807
+                    <br>
+                    (203) 489-1440
+                    <br>
+                    info@oneriveram.com
+                    <br>
+                    NFA ID: 0461647  |  FINRA: 167835
+                    <br>
+                    <br>
+                    <div class="about-contact__group-title">
+                        Other offices
+                    </div>
+                    One River Asset Management, LLC
+                    <br>
+                    525 East Micheltorena Street, Suite B
+                    <br>
+                    Santa Barbara, CA 93103
+                    <br>
+                    (805) 695-7340
                 </div>
             </div>
-        </footer>
+            <div class="about-contact__map">
+                <img src="./assets/images/about-map.jpg" alt="One River Map" class="u-image-cover">
+            </div>
+        </div>
+    </sectioin>
+    <footer class="footer">
+        <div class="footer__container">
+            <div class="footer__logo">
+                <img src="./assets/images/footer-logo.png" alt="OneRiver Logo" class="u-image-contain">
+            </div>
+            <div class="footer__contact">
+                <div class="footer__contact-row">
+                    <span class="footer__contact-info">
+                        (203) 489-1440
+                    </span>
+                    <span class="footer__contact-info-spacer">|</span>
+                    <span class="footer__contact-info">
+                        info@oneriveram.com
+                    </span>
+                </div>
+                <div class="footer__contact-row">
+                    <span class="footer__contact-info">
+                        <span>3 River Road,</span> <span>2nd Floor, Greenwich,</span> <span>CT 06807</span>
+                    </span>
+                </div>
+                <div class="footer__contact-row">
+                    <span class="footer__contact-info">
+                        NFA ID: 0461647
+                    </span>
+                    <span class="footer__contact-info-spacer">|</span>
+                    <span class="footer__contact-info">
+                        FINRA: 167835
+                    </span>
+                </div>
+            </div>
+            <div class="footer__text-container">
+                <p class="footer__text">
+                    One River Asset Management is an SEC registered investment advisor, regulated by the National
+                    Futures Association, and manages ERISA assets as a Qualified Plan Asset Manager.
+                </p>
+                <div class="footer__text footer__text--small">
+                    © 2020 One River Asset Management. All Rights Reserved.
+                </div>
+            </div>
+        </div>
+        <div class="footer__legal-links">
+            <div class="footer__legal-item">
+                <a href="/" class="footer__legal-link">
+                    Privacy
+                </a>
+            </div>
+            <div class="footer__legal-item">
+                <a href="/" class="footer__legal-link">
+                    Terms of use
+                </a>
+            </div>
+        </div>
+    </footer>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script>
+        window.addEventListener('load', () => {
 
-        <script>
             //mobile nav
             const mobileNavButton = document.querySelector('.navbar-mobile__toggle');
             const mobileMenu = document.querySelector('.navbar-mobile__menu-items');
             let moibleNavOpen = false;
-            
+
             mobileNavButton.addEventListener('click', () => {
-                if(!moibleNavOpen) {
+                if (!moibleNavOpen) {
                     mobileMenu.classList.add('navbar-mobile__menu-items--active');
                     mobileNavButton.classList.add('navbar-mobile__toggle--active');
                     moibleNavOpen = true;
@@ -146,6 +261,31 @@
                     moibleNavOpen = false;
                 }
             });
-        </script>
-    </body>
+
+            $('.about-banner__carousel').slick({
+                centerMode: true,
+                slidesToShow: 5,
+                centerPadding: '0',
+                responsive: [{
+                        breakpoint: 768,
+                        settings: {
+                            arrows: false,
+                            centerMode: true,
+                            slidesToShow: 3
+                        }
+                    },
+                    {
+                        breakpoint: 480,
+                        settings: {
+                            arrows: false,
+                            centerMode: true,
+                            slidesToShow: 1
+                        }
+                    }
+                ]
+            });
+        });
+    </script>
+</body>
+
 </html>
