--- a/digital.html
+++ b/digital.html
@@ -15,7 +15,7 @@
     <nav class="navbar">
         <div class="navbar__container">
             <div class="navbar__menu">
-                <a href="digital.html" class="navbar__menu-item--active">
+                <a href="digital.html" class="navbar__menu-item navbar__menu-item--active">
                     Digital
                 </a>
                 <a href="alternative.html" class="navbar__menu-item">
