--- a/weekendArticle2.html
+++ b/weekendArticle2.html
@@ -74,27 +74,28 @@
             </div>
             <div class="weekend-content__selector weekend-content__selector--media">
                 <span>
-                    Media
+                    <a href="./weekendNotes.html?section=media"> Media </a>
                 </span>
-                <div class="weekend-content__selector-button"></div>
+                <a href="./weekendNotes.html?section=media"> <div class="weekend-content__selector-button"></div> </a>
+              </a>
             </div>
             <div class="weekend-content__selector weekend-content__selector--press">
                 <span>
-                    Press
+                    <a href="./weekendNotes.html?section=press"> Press </a>
                 </span>
-                <div class="weekend-content__selector-button"></div>
+                <a href="./weekendNotes.html?section=press"> <div class="weekend-content__selector-button"></div> </a>
             </div>
             <div class="weekend-content__selector weekend-content__selector--podcasts">
                 <span>
-                    Podcasts
+                    <a href="./weekendNotes.html?section=podcasts"> Podcasts </a>
                 </span>
-                <div class="weekend-content__selector-button"></div>
+                <a href="./weekendNotes.html?section=podcasts"> <div class="weekend-content__selector-button"></div> </a>
             </div>
             <div class="weekend-content__selector weekend-content__selector--resources">
                 <span>
-                    Resources
+                    <a href="./weekendNotes.html?section=resources"> Resources </a>
                 </span>
-                <div class="weekend-content__selector-button"></div>
+                <a href="./weekendNotes.html?section=resources"> <div class="weekend-content__selector-button"></div> </a>
             </div>
             <div class="weekend-content__selector weekend-content__selector--weekend weekend-content__selector--active">
               <span>
@@ -103,6 +104,7 @@
               <div class="weekend-content__selector-button"></div>
             </div>
         </div>
+
 
           <div class="weekend-content__weekend-row weekend-content__weekend-row--vertical">
             <div class="weekend-content__weekend-column">
